k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monkmedia-nrcs
  labels:
    name: monkmedia-nrcs
    app: monkmedia-nrcs
